--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://Gomez0015.github.io/solanacasinofront",
     "name": "react-front",
     "version": "0.1.0",
     "private": false,
@@ -28,6 +29,8 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -53,6 +56,7 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.0",
+        "gh-pages": "^3.2.3",
         "postcss": "^8.4.5",
         "tailwindcss": "^3.0.2"
     }
