Your awesome message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://Gomez0015.github.io/solanacasinofront",
+    "homepage": "http://gomez0015.github.io/SolanaCasinoFront",
     "name": "react-front",
     "version": "0.1.0",
     "private": false,
